--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
 						message = $('#message').val();
 					$.ajax({
 						type: 'post',
-						url: 'http://internetmarketingaccelerator.com//class/form-process.php',
+						url: 'http://internetmarketingaccelerator.com/class/form-process.php',
 						data: {name: name, email: email, message: message},
 						success: function(response){
 						}
