--- a/index.html
+++ b/index.html
@@ -995,6 +995,7 @@
 					$.ajax({
 						type: 'post',
 						url: 'http://internetmarketingaccelerator.com/class/form-process.php',
+						crossDomain: true,
 						data: {name: name, email: email, message: message},
 						success: function(response){
 						}
