--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<body>
 		
 		<!-- Preloader -->
-		<section class="preloader-wrapper hero-height">
+		<div class="preloader-wrapper hero-height">
 			<div class="preloader">
 				<div class="preloader-inner">
 					<div></div>
@@ -43,7 +43,7 @@
 					<div></div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!--/ Preloader -->
 
 		<!-- Site Header -->
@@ -98,7 +98,7 @@
 		<!--/ Site Header -->
 		
 		<!-- Page Cover Section -->
-		<section class="section-cover" id="home">
+		<div class="section-cover" id="home">
 			<div id="rs-header-6-wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="webproductlighthero" style="background-color:#e6e6e6;margin:0px auto;padding:0px;margin-top:0px;margin-bottom:0px;">
                 <div id="rs-header-6" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.1.1RC">
                     <ul>
@@ -258,7 +258,7 @@
 							data-splitin="none"
 							data-splitout="none"
 							data-responsive_offset="on">
-								<img src="img/ban.png" style="width:415px!important;height:auto!important;position:relative!important;bottom: 100px!important;">
+								<img src="img/ban.png" style="width:415px!important;height:auto!important;position:relative!important;bottom: 100px!important;" alt="">
                             </div>
 
                             <div class="tp-caption WebProduct-Content tp-resizeme rs-parallaxlevel-7" id="slide-699-layer-9" style="z-index: 15; min-width: 448px; max-width: 448px; white-space: normal;"
@@ -335,7 +335,7 @@
                     <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
                 </div>
             </div>
-		</section>
+		</div>
 		<!--/ Page Cover Section -->
 		
 		<!-- About Section -->
@@ -401,7 +401,7 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-pie-chart"></span></div>
 								<div class="feature-title-alt">Valid Coding</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									We ensure that our coding structure is Standard passed with W3C HTML Validator and SEO friendly.
 								</div>
 							</div>
 						</div>
@@ -410,7 +410,7 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-laptop-phone"></span></div>
 								<div class="feature-title-alt">Responsive Layout</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									Responsive Web Design with modern techiniques in development and also with realistic and flat design.
 								</div>
 							</div>
 						</div>
@@ -419,7 +419,7 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-screen"></span></div>
 								<div class="feature-title-alt">Retina ready</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									We use clear and high resolution images to your website for better look of your website.
 								</div>
 							</div>
 						</div>
@@ -428,7 +428,7 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-magic-wand"></span></div>
 								<div class="feature-title-alt">Pixel Perfect</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									We use Perfect Pixel for Front-end Development to deliver the website exactly what you expect from the designs.
 								</div>
 							</div>
 						</div>
@@ -437,7 +437,7 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-mic"></span></div>
 								<div class="feature-title-alt">SEO Friendly</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									Our coding structure are SEO freindly and passed the Standard of W3C HTML Validator. 
 								</div>
 							</div>
 						</div>
@@ -446,7 +446,8 @@
 								<div class="feature-icon-alt"><span class="lnr lnr-cog"></span></div>
 								<div class="feature-title-alt">Easy Customization</div>
 								<div class="feature-desc-alt">
-									Here comes some sample text. Don't worry, you can easily replace this text by your own text.
+									We provide CMS application for each site that can help you to customize you website content 
+									and Web Page Layout that can customized easily.
 								</div>
 							</div>
 						</div>
@@ -457,7 +458,7 @@
 		<!--/ Team Section -->
 		
 		<!-- Portfolio Section -->
-		<section id="ourworks" class="portfolio-section mgt-130" id="portfolio-section">
+		<section id="ourworks" class="portfolio-section mgt-130">
 			<div class="section-title">
 				<div class="container">
 					<div class="row">
@@ -710,7 +711,7 @@
 										</div>
 									</div>
 									<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 c-form-wrapper pd-0">
-										<form method="post" action="" id="c-form">
+										<form method="post" action="#" id="c-form">
 										
 											<div class="form-group">
 												<label class="col-lg-6 input-text-label">
