--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>ibitwebsolutions</title>
 </head>
 <body style="margin:0;padding:0">
-	<iframe src="http://internetmarketingaccelerator.com/class/ibits/" frameborder="0" width="100%" height="100%" style="border: 0; position:fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+	<iframe src="http://internetmarketingaccelerator.com/class/ibits/index.html" frameborder="0" width="100%" height="100%" style="border: 0; position:fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </body>
 </html>
