--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 										</div>
 									</div>
 									<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 c-form-wrapper pd-0">
-										<form method="post" action="#" id="c-form">
+										<form method="post"  id="c-form">
 										
 											<div class="form-group">
 												<label class="col-lg-6 input-text-label">
@@ -986,25 +986,6 @@
 			});
 		</script>
 		<script type="text/javascript" src="js/custom.js"></script>
-		<script>
-			// $(document).ready(function() {
-			// 	$('#c-form').submit(function(e){
-			// 		e.preventDefault();
-			// 		var	name = $('#name').val(),
-			// 			email = $('#email').val(),
-			// 			message = $('#message').val();
-			// 		$.ajax({
-			// 			type: 'post',
-			// 			url: 'https://internetmarketingaccelerator.com/class/form-process.php',
-			// 			crossDomain: true,
-			// 			data: {name: name, email: email, message: message},
-			// 			success: function(response){
-			// 			}
-			// 		});
-					
-			// 	});
-			// });
-		</script>
 	</body>
 
 </html>
