Toyo Tires Website Sub Folder v1.0.0

--- a/toyo/about.html
+++ b/toyo/about.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<div class="logo"><img src="assets/img/logo.png" alt=""></div>
+					<div class="logo"><a href="/index.html"><img src="assets/img/logo.png" alt=""></a></div>
 				</div>
 				<div class="col-sm-9">
 					<div class="col-sm-12">
@@ -28,9 +28,9 @@
 					<div class="col-sm-12">
 						<div id="menu">
 							<ul>
-								<li><a href="#">about us</a></li>
+								<li><a href="/about.html">about us</a></li>
 								<li><a href="#">tires</a></li>
-								<li><a href="#">dealers</a></li>
+								<li><a href="/dealers.html">dealers</a></li>
 								<li><a href="#">news</a></li>
 								<li><a href="#">services</a></li>
 								<li><a href="#">contact us</a></li>
