Toyo headers update

--- a/toyo/about.html
+++ b/toyo/about.html
@@ -13,27 +13,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<div class="logo"><a href="/index.html"><img src="assets/img/logo.png" alt=""></a></div>
+					<div class="logo"><a href="/toyo/index.html"><img src="assets/img/logo.png" alt=""></a></div>
 				</div>
 				<div class="col-sm-9">
 					<div class="col-sm-12">
 						<div class="top-menu">
 							<ul>
-								<li><img src="assets/img/tireshakk.png" alt="TIRESHAKK"></li>
-								<li><img src="assets/img/fb-blue.png" alt="TIRESHAKK FACEBOOK"></li>
-								<li><img src="assets/img/ig-blue.png" alt="TIRESHAKK INSTAGRAM"></li>
+								<li><a href="#"><img src="assets/img/tireshakk.png" alt="TIRESHAKK"></a></li>
+								<li><a href="#"><img src="assets/img/fb-blue.png" alt="TIRESHAKK FACEBOOK"></a></li>
+								<li><a href="#"><img src="assets/img/ig-blue.png" alt="TIRESHAKK INSTAGRAM"></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-12">
 						<div id="menu">
 							<ul>
-								<li><a href="/about.html">about us</a></li>
-								<li><a href="#">tires</a></li>
-								<li><a href="/dealers.html">dealers</a></li>
-								<li><a href="#">news</a></li>
-								<li><a href="#">services</a></li>
-								<li><a href="#">contact us</a></li>
+								<li><a href="/toyo/about.html">about us</a></li>
+								<li><a href="/toyo/tires.html">tires</a></li>
+								<li><a href="/toyo/dealers.html">dealers</a></li>
+								<li><a href="/toyo/news.html">news</a></li>
+								<li><a href="/toyo/services.html">services</a></li>
+								<li><a href="/toyo/contact.html">contact us</a></li>
 							</ul>
 						</div>
 					</div>
