Toyo Dealers Page Map not fully working

--- a/toyo/index.html
+++ b/toyo/index.html
@@ -59,21 +59,21 @@
 	<div id="quickmenu">
 		<div class="quick-box">
 			<div class="col-sm-4 location">
-				<a href="#">
+				<a href="/toyo/dealers.html">
 					<p>find a dealer</p>
 					<img src="assets/img/ph.png" alt="">
 					<img src="assets/img/blue.png" alt="" class="light">
 				</a>
 			</div>
 			<div class="col-sm-4 tires">
-				<a href="#">
+				<a href="/toyo/tires.html">
 					<p>select tires</p>
 					<img src="assets/img/tire.png" alt="">
 					<img src="assets/img/blue.png" alt="" class="light">
 				</a>
 			</div>
 			<div class="col-sm-4 cars">
-				<a href="#">
+				<a href="/toyo/tires.html">
 					<p>select by cars</p>
 					<img src="assets/img/car.png" alt="">
 					<img src="assets/img/blue.png" alt="" class="light">
