--- a/toyo/contact.html
+++ b/toyo/contact.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Toyo Tires</title>
-    <link type="text/css" rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body class="scroll">
 	<header>
@@ -47,7 +46,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="page-title">About us</p>
+							<p class="page-title">Contact us</p>
 						</div>
 					</div>
 				</div>
@@ -55,32 +54,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-8 col-xs-12">
-								<h5 class="title">SERVICES, STYLE, AND REALLY GREAT TIRES</h5>
-								<p>
-									Established in 1966, Toyo Tire U.S.A. Corp. represents the innovation, quality, performance, and excellent service that Toyo Tires has
-									delivered worldwide for more than 70 years.
-								</p>
+								<h5 class="title">COSTUMER CARE: WE'RE HERE TO HELP.</h5>
 
-								<p>
-									We offer a complete selection of premium replacement tires for nearly every make and model including light trucks, SUVs, 
-									high performance cars, and luxury vehicles, as well as commercial trucks. Many of these tires are built here in the United States 
-									at our state-of-the-art factory in Bartow County, Georgia.
-								</p>
+								<p>Do you have feedback or questions regarding our products?<br>Or you want to become a Toyo Tires Dealer?</p>
 
-								<p><img src="assets/img/toyo-logo.png" alt=""></p>
-
-								<p>
-									On October 1, 2007, Toyo Tires unified our brand logos, which previously varied by segment. We have decided to unify our brand logos 
-									in order to strengthen our brand on a global scale and to energize our marketing activities by presenting a uniform brand image. 
-									Vivid blue of Toyo Tires logo conveys an impression of youth.
-								</p>
-
-								<p><img src="assets/img/driven-to-perform.png" alt=""></p>
-
-								<p>We introduced our brand statement “driven to perform” on May 20, 2008.</p>
-
-								<p>Logotype of our statement symbolizes loyalty and spirit of innovation.
-									<br>The figure of expresses inspiration.</p>
+								<p>You may contact us.</p>
+								<p>MJC Building Ortigas Avenue, Greenhills East, Mandaluyong City.</p>
+								<p>727-6150/51.</p>
+								<p>or visit our Facebook page.</p>
 							</div>
 
 							<div class="col-sm-4 col-xs-12">
