--- a/toyo/tires.html
+++ b/toyo/tires.html
@@ -1,71 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Toyo Tires</title>
-    <link type="text/css" rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body class="scroll">
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="logo"><a href="/toyo/index.html"><img src="assets/img/logo.png" alt=""></a></div>
-				</div>
-				<div class="col-sm-9">
-					<div class="col-sm-12">
-						<div class="top-menu">
-							<ul>
-								<li><a href="#"><img src="assets/img/tireshakk.png" alt="TIRESHAKK"></a></li>
-								<li><a href="#"><img src="assets/img/fb-blue.png" alt="TIRESHAKK FACEBOOK"></a></li>
-								<li><a href="#"><img src="assets/img/ig-blue.png" alt="TIRESHAKK INSTAGRAM"></a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-12">
-						<div id="menu">
-							<ul>
-								<li><a href="/toyo/about.html">about us</a></li>
-								<li><a href="/toyo/tires.html">tires</a></li>
-								<li><a href="/toyo/dealers.html">dealers</a></li>
-								<li><a href="/toyo/news.html">news</a></li>
-								<li><a href="/toyo/services.html">services</a></li>
-								<li><a href="/toyo/contact.html">contact us</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<section>
-		<article>
-			<div class="page">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<p class="page-title">About us</p>
-						</div>
-					</div>
-				</div>
-				<div class="page-body">
-					<div class="container">
-						<div class="row">
-							
-						</div>
-					</div>
-				</div>
-			</div>
-		</article>
-	</section>
-	<footer></footer>
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-  crossorigin="anonymous"></script>
-	<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/js/index.js"></script>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="logo"><a href="/toyo/index.html"><img src="assets/img/logo.png" alt=""></a></div>
+                </div>
+                <div class="col-sm-9">
+                    <div class="col-sm-12">
+                        <div class="top-menu">
+                            <ul>
+                                <li><a href="#"><img src="assets/img/tireshakk.png" alt="TIRESHAKK"></a></li>
+                                <li><a href="#"><img src="assets/img/fb-blue.png" alt="TIRESHAKK FACEBOOK"></a></li>
+                                <li><a href="#"><img src="assets/img/ig-blue.png" alt="TIRESHAKK INSTAGRAM"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <div id="menu">
+                            <ul>
+                                <li><a href="/toyo/about.html">about us</a></li>
+                                <li><a href="/toyo/tires.html">tires</a></li>
+                                <li><a href="/toyo/dealers.html">dealers</a></li>
+                                <li><a href="/toyo/news.html">news</a></li>
+                                <li><a href="/toyo/services.html">services</a></li>
+                                <li><a href="/toyo/contact.html">contact us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section>
+        <article>
+            <div class="page">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <p class="page-title">Find your fit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="pull-left">
+                                    <ul class="size-select">
+                                        <li><a href="#">BY VEHICLE</a></li>
+                                        <li><a href="#" class="active">BY SIZE</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="size-options">
+                                    <ul>
+                                        <li><a href="#">145</a></li>
+                                        <li><a href="#">225</a></li>
+                                        <li><a href="#">295</a></li>
+                                        <li><a href="#">30</a></li>
+                                        <li><a href="#">155</a></li>
+                                        <li><a href="#">235</a></li>
+                                        <li><a href="#">305</a></li>
+                                        <li><a href="#">31</a></li>
+                                        <li><a href="#">175</a></li>
+                                        <li><a href="#">245</a></li>
+                                        <li><a href="#">315</a></li>
+                                        <li><a href="#">33</a></li>
+                                        <li><a href="#">185</a></li>
+                                        <li><a href="#">255</a></li>
+                                        <li><a href="#">325</a></li>
+                                        <li><a href="#">35</a></li>
+                                        <li><a href="#">195</a></li>
+                                        <li><a href="#">265</a></li>
+                                        <li><a href="#">335</a></li>
+                                        <li><a href="#">37</a></li>
+                                        <li><a href="#">205</a></li>
+                                        <li><a href="#">275</a></li>
+                                        <li><a href="#">345</a></li>
+                                        <li><a href="#">38</a></li>
+                                        <li><a href="#">215</a></li>
+                                        <li><a href="#">285</a></li>
+                                        <li><a href="#">385</a></li>
+                                        <li><a href="#">40</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 text-center">
+                                <h3>HOW TO FIND YOUR TIRE SIZE</h3>
+                                <img src="assets/img/1.png" alt="">
+							</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </article>
+    </section>
+    <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 </body>
+
 </html>
