--- a/toyo/index.html
+++ b/toyo/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
+    <title>Toyo Tires</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Toyo Tires</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
-
 	<header>
 		<div class="container">
 			<div class="row">
@@ -85,7 +84,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/plugins/bootstrap/js/lazyload/lazyload.min.js"></script>
-	<script type="text/javascript" src="assets/gulp-js/index.js"></script>
+	<script src="assets/plugins/lazyload/lazyload.min.js"></script>
+	<script type="text/javascript" src="assets/js/index.js"></script>
 </body>
 </html>
