New changes from Maam Cheery

--- a/toyo/index.html
+++ b/toyo/index.html
@@ -29,10 +29,10 @@
 							<ul>
 								<li><a href="/toyo/about.html">about us</a></li>
 								<li><a href="/toyo/tires.html">tires</a></li>
-								<li><a href="/toyo/dealers.html">dealers</a></li>
+								<li><a href="/toyo/dealers.html">order now</a></li>
 								<li><a href="/toyo/news.html">news</a></li>
-								<li><a href="/toyo/services.html">services</a></li>
 								<li><a href="/toyo/contact.html">contact us</a></li>
+								<li><a href="/toyo/sign in.html">sign in</a></li>
 							</ul>
 						</div>
 					</div>
@@ -40,20 +40,10 @@
 			</div>
 		</div>
 	</header>
-	<section>
-		<div class="container">
-			<div class="row">
-				<article id="home-news">
-					<ul>
-						<li><a href="#"><img src="assets/img/home-news.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/img/home-news.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/img/home-news.jpg" alt=""></a></li>
-					</ul>
-				</article>
-
-			</div>
-		</div>
-	</section>
+	<div id="home-news">
+		<ul>
+			<li><a href="#"><img src="assets/img/home-news.jpg" alt=""></a></li>
+	</div>
 	<div id="quickmenu">
 		<div class="quick-box">
 			<div class="col-sm-4 location">
@@ -65,7 +55,7 @@
 			</div>
 			<div class="col-sm-4 tires">
 				<a href="/toyo/tires.html">
-					<p>select tires</p>
+					<p>select by size</p>
 					<img src="assets/img/tire.png" alt="">
 					<img src="assets/img/blue.png" alt="" class="light">
 				</a>
