--- a/toyo/contact.html
+++ b/toyo/contact.html
@@ -53,7 +53,7 @@
 				<div class="page-body">
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-8 col-xs-12">
+							<div class="col-sm-12 col-xs-12 text-center">
 								<h5 class="title">COSTUMER CARE: WE'RE HERE TO HELP.</h5>
 
 								<p>Do you have feedback or questions regarding our products?<br>Or you want to become a Toyo Tires Dealer?</p>
@@ -62,19 +62,6 @@
 								<p>MJC Building Ortigas Avenue, Greenhills East, Mandaluyong City.</p>
 								<p>727-6150/51.</p>
 								<p>or visit our Facebook page.</p>
-							</div>
-
-							<div class="col-sm-4 col-xs-12">
-								<div class="col-xs-12">
-									<h3 class="title">News</h3>
-									<div class="news-box">
-										<img src="assets/img/news.jpg" alt="">
-									</div>
-									<h3 class="title">PROMOS</h3>
-									<div class="news-box">
-										<img src="assets/img/news.jpg" alt="">
-									</div>
-								</div>
 							</div>
 						</div>
 					</div>
