Tires selection JS

--- a/toyo/about.html
+++ b/toyo/about.html
@@ -29,10 +29,10 @@
 							<ul>
 								<li><a href="/toyo/about.html">about us</a></li>
 								<li><a href="/toyo/tires.html">tires</a></li>
-								<li><a href="/toyo/dealers.html">dealers</a></li>
+								<li><a href="/toyo/dealers.html">order now</a></li>
 								<li><a href="/toyo/news.html">news</a></li>
-								<li><a href="/toyo/services.html">services</a></li>
 								<li><a href="/toyo/contact.html">contact us</a></li>
+								<li><a href="/toyo/sign in.html">sign in</a></li>
 							</ul>
 						</div>
 					</div>
