--- a/toyo/tires.html
+++ b/toyo/tires.html
@@ -31,10 +31,10 @@
                             <ul>
                                 <li><a href="/toyo/about.html">about us</a></li>
                                 <li><a href="/toyo/tires.html">tires</a></li>
-                                <li><a href="/toyo/dealers.html">dealers</a></li>
+                                <li><a href="/toyo/dealers.html">order now</a></li>
                                 <li><a href="/toyo/news.html">news</a></li>
-                                <li><a href="/toyo/services.html">services</a></li>
                                 <li><a href="/toyo/contact.html">contact us</a></li>
+                                <li><a href="/toyo/sign in.html">sign in</a></li>
                             </ul>
                         </div>
                     </div>
@@ -64,51 +64,14 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <div class="size-options">
-                                    <ul>
-                                        <li><a href="#">145</a></li>
-                                        <li><a href="#">155</a></li>
-                                        <li><a href="#">175</a></li>
-                                        <li><a href="#">185</a></li>
-                                        <li><a href="#">195</a></li>
-                                        <li><a href="#">205</a></li>
-                                        <li><a href="#">215</a></li>
-                                    </ul>
-
-                                    <ul>
-                                        <li><a href="#">225</a></li>
-                                        <li><a href="#">235</a></li>
-                                        <li><a href="#">245</a></li>
-                                        <li><a href="#">255</a></li>
-                                        <li><a href="#">265</a></li>
-                                        <li><a href="#">275</a></li>
-                                        <li><a href="#">285</a></li>
-                                    </ul>
-
-                                    <ul>
-                                        <li><a href="#">295</a></li>
-                                        <li><a href="#">305</a></li>
-                                        <li><a href="#">315</a></li>
-                                        <li><a href="#">325</a></li>
-                                        <li><a href="#">335</a></li>
-                                        <li><a href="#">345</a></li>
-                                        <li><a href="#">385</a></li>
-                                    </ul>
-
-                                    <ul>
-                                        <li><a href="#">30</a></li>
-                                        <li><a href="#">31</a></li>
-                                        <li><a href="#">33</a></li>
-                                        <li><a href="#">35</a></li>
-                                        <li><a href="#">37</a></li>
-                                        <li><a href="#">38</a></li>
-                                        <li><a href="#">40</a></li>
-                                    </ul>
+                                <div class="size-box">
+                                    <div class="size-options">
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 text-center">
                                 <h3>HOW TO FIND YOUR TIRE SIZE</h3>
-                                <img src="assets/img/1.png" alt="">
+                                <img src="assets/img/1.png" alt="" id="chart">
 							</div>
                             </div>
                         </div>
