--- a/toyo/contact.html
+++ b/toyo/contact.html
@@ -29,10 +29,10 @@
 							<ul>
 								<li><a href="/toyo/about.html">about us</a></li>
 								<li><a href="/toyo/tires.html">tires</a></li>
-								<li><a href="/toyo/dealers.html">dealers</a></li>
+								<li><a href="/toyo/dealers.html">order now</a></li>
 								<li><a href="/toyo/news.html">news</a></li>
-								<li><a href="/toyo/services.html">services</a></li>
 								<li><a href="/toyo/contact.html">contact us</a></li>
+								<li><a href="/toyo/sign in.html">sign in</a></li>
 							</ul>
 						</div>
 					</div>
@@ -53,7 +53,7 @@
 				<div class="page-body">
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12 col-xs-12 text-center">
+							<div class="col-sm-12 col-xs-12 text-center contact">
 								<h5 class="title">COSTUMER CARE: WE'RE HERE TO HELP.</h5>
 
 								<p>Do you have feedback or questions regarding our products?<br>Or you want to become a Toyo Tires Dealer?</p>
