News Page and Complete Cars Searching UI

--- a/toyo/cars.html
+++ b/toyo/cars.html
@@ -55,7 +55,7 @@
                 <div class="page-body">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <div class="pull-left">
                                     <ul class="size-select">
                                         <li><a href="#" class="active">BY VEHICLE</a></li>
@@ -64,8 +64,36 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
+                                <form action="#" class="col-sm-8 col-sm-offset-2 cars-form">
+                                    <div class="input-group">
+                                        <label for="#carbrand">Vehicle make</label>
+                                        <select name="" id="carbrand">
+                                            <option value="">Isuzu</option>
+                                            <option value="">Ford</option>
+                                            <option value="">Toyota</option>
+                                            <option value="">Nissan</option>
+                                            <option value="">Honda</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="#carbrand">Models</label>
+                                        <select name="" id="carbrand">
+                                            <option value="">Montero</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="#carbrand">Tire size</label>
+                                        <select name="" id="carbrand">
+                                            <option value="">155/65 R 13</option>
+                                            <option value="">155/67 R 14</option>
+                                        </select>
+                                    </div>
+                                    <input type="submit" value="Submit" class="btn btn-custom pull-right">
+                                </form>
+                            </div>
+                            <div class="col-sm-6">
                                 <div class="car-options">
-                                    <div class="car-box">
+                                    <div class="slide-box">
                                         <div class="car-select">
                                           <div><img data-lazy="assets/img/car1.png" alt=""></div>
                                           <div><img data-lazy="assets/img/car2.png" alt=""></div>
@@ -84,9 +112,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 text-center">
-                                
-							</div>
                             </div>
                         </div>
                     </div>
