--- a/toyo/cars.html
+++ b/toyo/cars.html
@@ -67,26 +67,15 @@
                                 <form action="#" class="col-sm-8 col-sm-offset-2 cars-form">
                                     <div class="input-group">
                                         <label for="#carbrand">Vehicle make</label>
-                                        <select name="" id="carbrand">
-                                            <option value="">Isuzu</option>
-                                            <option value="">Ford</option>
-                                            <option value="">Toyota</option>
-                                            <option value="">Nissan</option>
-                                            <option value="">Honda</option>
-                                        </select>
+                                        <select name="" id="maker"></select>
                                     </div>
                                     <div class="input-group">
                                         <label for="#carbrand">Models</label>
-                                        <select name="" id="carbrand">
-                                            <option value="">Montero</option>
-                                        </select>
+                                        <select name="" id="model"></select>
                                     </div>
                                     <div class="input-group">
                                         <label for="#carbrand">Tire size</label>
-                                        <select name="" id="carbrand">
-                                            <option value="">155/65 R 13</option>
-                                            <option value="">155/67 R 14</option>
-                                        </select>
+                                        <select name="" id="sizes"></select>
                                     </div>
                                     <input type="submit" value="Submit" class="btn btn-custom pull-right">
                                 </form>
@@ -94,22 +83,12 @@
                             <div class="col-sm-6">
                                 <div class="car-options">
                                     <div class="slide-box">
-                                        <div class="car-select">
-                                          <div><img data-lazy="assets/img/car1.png" alt=""></div>
-                                          <div><img data-lazy="assets/img/car2.png" alt=""></div>
-                                          <div><img data-lazy="assets/img/car3.png" alt=""></div>
-                                          <div><img data-lazy="assets/img/car4.png" alt=""></div>
-                                        </div>
+                                        <div class="car-select"></div>
                                         <a href="#" class="right-nav"><img src="assets/img/right-nav.jpg" alt=""></a>
                                         <a href="#" class="left-nav"><img src="assets/img/left-nav.jpg" alt=""></a>
                                     </div>
 
-                                    <div class="car-thumb">
-                                      <div><img data-lazy="assets/img/car1.png" alt=""></div>
-                                      <div><img data-lazy="assets/img/car2.png" alt=""></div>
-                                      <div><img data-lazy="assets/img/car3.png" alt=""></div>
-                                      <div><img data-lazy="assets/img/car4.png" alt=""></div>
-                                    </div>
+                                    <div class="car-thumb"></div>
                                 </div>
                             </div>
                             </div>
