--- a/toyo/search-result.html
+++ b/toyo/search-result.html
@@ -55,6 +55,13 @@
                 <div class="page-body">
                     <div class="container">
                         <div class="row">
+                            <div class="result-slide">
+                                <div>
+                                    <div class="result-item">
+                                        <img src="assets/img/tire-pattern/OPA32.png" alt="" class="tire-img">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
